# SecurityGuard

./: .gitignore  README.md  build.gradle  gradle.properties  introduction.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  apk_parser.cpp  apk_parser.h  jni_interface.cpp  security_checker.cpp  security_guard.h  sha256_fallback.h  signature_verify.cpp  xposed_detector.cpp
app/src/main/java/com/example/securityguard/: AdvancedDetector.java  DetectionResult.java  MainActivity.java  NativeSecurityCheckResult.java  SecurityApplication.java  SecurityGuard.java  SignatureHelper.java  SignatureVerificationResult.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
